metadata/force-app/main/default/objects/CustomName_ewNwY__c/CustomName_ewNwY__c.object-meta.xml
<CustomObject>
    <description>Description_HaNcB</description>
    <label>CustomLabel_fwsOZ</label>
    <nameField>
        <label>CustomLabel_fwsOZ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_fwsOZs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>