metadata/force-app/main/default/objects/CustomName_ewNwY__c/fields/CustomField_TMlBD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_TMlBD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldWtSTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>